--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -14,7 +14,8 @@
                 <div class="col-6 justify-content-center text-center">
                     <div class="rule-list">
                         <ul class="mt-2">
-                            <li>Qalqalah</li>
+                            <li *ngFor="let r of ruleList">{{r.name}}</li>
+                            <!-- <li>Qalqalah</li>
                             <li>Regular Madd</li>
                             <li>Ghunnah</li>
                             <li>Idghaam with no ghunnah</li>
@@ -22,7 +23,7 @@
                             <li>Ikhfa</li>
                             <li>Iqlaab</li>
                             <li>Hamzatul Wasl</li>
-                            <li>Elongated Madd</li>
+                            <li>Elongated Madd</li> -->
                         </ul>
                     </div>
                 </div>
